# self-nomad

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter-authoring.md  architecture.md  repository-format.md  threat-model.md
docs/decisions/: 0001-git-cli.md  0002-yaml.md  0003-repository-format.md  0004-local-state.md
src/self_nomad/: __init__.py  __main__.py  application.py  cli.py  errors.py
src/self_nomad/adapters/: __init__.py  base.py  hermes.py  openclaw.py  registry.py
src/self_nomad/domain/: __init__.py  adapters.py  proposals.py  results.py
src/self_nomad/filesystem/: __init__.py  atomic.py  hashing.py  paths.py
src/self_nomad/git/: __init__.py  backend.py
src/self_nomad/manifest/: __init__.py  loader.py  schema.py
src/self_nomad/policy/: __init__.py  schema.py
src/self_nomad/proposals/: __init__.py  service.py  store.py
src/self_nomad/repository/: __init__.py  layout.py  self_repository.py
tests/e2e/: test_cli_adapters.py  test_cli_proposal.py
tests/fixtures/hermes/minimal/: .env  SOUL.md  state.db
tests/fixtures/hermes/minimal/memories/: MEMORY.md  USER.md
tests/fixtures/openclaw/minimal/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md
tests/fixtures/openclaw/minimal/memory/: 2026-07-19.md
tests/fixtures/openclaw/minimal/skills/research/: SKILL.md
tests/integration/: test_adapters.py  test_proposals.py
tests/unit/: test_atomic.py  test_manifest.py  test_repository.py
