[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "self-nomad"
version = "0.1.0.dev0"
description = "Git-backed portability and change governance for persistent AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "self-nomad contributors" }]
dependencies = [
  "platformdirs>=4.3",
  "pydantic>=2.10",
  "PyYAML>=6.0.2",
  "rich>=13.9",
  "typer>=0.15",
]

[project.scripts]
self-nomad = "self_nomad.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-PyYAML>=6.0.12",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-PyYAML>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/self_nomad"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["self_nomad"]
